Make app runnable from gradle